scrollbar fixed

--- a/abstract.css
+++ b/abstract.css
@@ -11,7 +11,6 @@ body{
 
 nav{
     padding: 0px 100px;
-    width: 100vw;
     position: relative;
     /* width: 100%; */
     height: 90px;
@@ -115,7 +114,6 @@ ul{
     height: 24px;
 }
 .containt {
-    margin: 0px -15px;
     padding: 10rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
